<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/songs"
            android:icon="@drawable/songs"
            android:title="@string/songs" />

        <item
            android:id="@+id/equalizer"
            android:icon="@drawable/equalizer"
            android:title="@string/equalizer" />

        <item
            android:id="@+id/playlist"
            android:icon="@drawable/playlist"
            android:title="@string/playlist" />

        <item
            android:id="@+id/favourite"
            android:icon="@drawable/favourite"
            android:title="@string/favourite" />

        <item
            android:id="@+id/notes"
            android:icon="@drawable/notes"
            android:title="@string/notes" />

        <item
            android:id="@+id/folder"
            android:icon="@drawable/folders"
            android:title="@string/folder"/>

    </group>

    <!--  Sub Menus  -->
    <item android:title="@string/others">
        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/theme"
                    android:icon="@drawable/profile"
                    android:title="@string/theme" />

                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/settings"
                    android:title="@string/setting"/>

                <item
                    android:id="@+id/about"
                    android:icon="@drawable/about"
                    android:title="@string/about"/>
            </group>
        </menu>
    </item>

</menu>