<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaber"
    tools:context="com.example.mahmoudheshmat.musicapp.loginActivity">

    <LinearLayout

        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="70dp"
            android:hint="@string/email"
            android:id="@+id/email"
            android:background="@color/WHITE"
            android:padding="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="70dp"
            android:id="@+id/password"
            android:background="@color/WHITE"
            android:padding="10dp"/>


        <Button
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:id="@+id/signin"
            android:onClick="register"
            android:background="@drawable/button_shape"
            android:padding="15dp"
            android:layout_marginBottom="@dimen/dim15"
            android:layout_marginLeft="70dp"
            android:textSize="20dp" />

    </LinearLayout>

</RelativeLayout>
